--- a/GWCDiscordBotTests/GWCDiscordBotTests.csproj
+++ b/GWCDiscordBotTests/GWCDiscordBotTests.csproj
@@ -27,4 +27,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\DbAccess\" />
+  </ItemGroup>
+
 </Project>
